portal-mdek-application: - added SNS Hierarchy API to portal-mdek-application

--- a/src/test/resources/sns.properties
+++ b/src/test/resources/sns.properties
@@ -5,9 +5,8 @@ sns.password=ingrid_test
 sns.language=de
 sns.serviceURL=http://www.semantic-network.de/service-xtm-2.0/xtm/soap
 #sns.serviceURL=http://sns.innoq.com/service-xtm-2.0/xtm/soap
+# timeout in ms
 sns.timeout=30000
-sns.maxWordAnalyzing=1000
-sns.maxNumResults=100
 # Switch to "rs:" when the native key changes
 sns.nativeKeyPrefix=ags:
 
