external-service-sns: - added debug messages. FIXED log4j properties, no duplicate output (additivity false !)

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,5 +1,6 @@
-log4j.rootLogger = ERROR, ConsoleAppender
+log4j.rootLogger = WARN, ConsoleAppender
 log4j.category.de.ingrid = DEBUG, ConsoleAppender
+log4j.additivity.de.ingrid=false
 
 log4j.appender.ConsoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.ConsoleAppender.layout=org.apache.log4j.PatternLayout
