--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.rootLogger = WARN, ConsoleAppender
-log4j.category.de.ingrid = DEBUG, ConsoleAppender
+log4j.category.de.ingrid = INFO, ConsoleAppender
 log4j.additivity.de.ingrid=false
 
 log4j.appender.ConsoleAppender=org.apache.log4j.ConsoleAppender
