- migration in progress

--- a/src/test/resources/sns.properties
+++ b/src/test/resources/sns.properties
@@ -5,7 +5,7 @@ sns.password=
 sns.language=de
 
 # requests to time related events
-sns.serviceURL.cronicle=http://iqvoc-chronicle.innoq.com/
+sns.serviceURL.chronicle=http://iqvoc-chronicle.innoq.com/
 
 # requests to thesaurus
 #sns.serviceURL.thesaurus=http://data.uba.de/umt/
