--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <groupId>de.ingrid</groupId>
     <artifactId>ingrid-base-pom</artifactId>
-    <version>3.3.0</version>
+    <version>3.4.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.ingrid</groupId>
   <artifactId>ingrid-external-service-sns</artifactId>
   <packaging>jar</packaging>
-  <version>3.4.0-SNAPSHOT</version>
+  <version>3.4.0.beta-SNAPSHOT</version>
   <name>ingrid-external-service-sns</name>
   <scm>
     <connection>scm:svn:https://harrison.its-technidata.de:444/svn/ingrid/ingrid-external-service-sns/trunk</connection>
@@ -33,15 +33,16 @@
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-external-services-api</artifactId>
+      <version>3.4.0.beta-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>axis</groupId>
       <artifactId>axis</artifactId>
     </dependency>
-    <dependency>
+    <!-- <dependency>
       <groupId>uba</groupId>
       <artifactId>xtmStubs</artifactId>
-    </dependency>
+    </dependency> -->
     <!-- JENA libs for RDF support -->
     <dependency>
       <groupId>org.apache.jena</groupId>
