--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.additivity.de.ingrid=false
 
 log4j.appender.ConsoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.ConsoleAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.ConsoleAppender.layout.ConversionPattern=%-5p: %d{yyyy-MM-dd HH:mm:ss.SSS:} %C{7}.%M(%L): %m%n
+log4j.appender.ConsoleAppender.layout.ConversionPattern=%-5p: %d{yyyy-MM-dd HH:mm:ss.SSS:} (%F:%L): %m%n
 log4j.appender.ConsoleAppender.Threshold=DEBUG
 
 #file appender
