- implemented autoClassify from text - updated tests

--- a/src/main/resources/mapping.properties
+++ b/src/main/resources/mapping.properties
@@ -13,7 +13,7 @@ gazetteer.de.-location-land-landscape-archipelago-=Inselgruppe
 gazetteer.de.-location-land-landscape-mountain-=Berg
 gazetteer.de.-location-land-landscape-mountains-=Gebirge
 gazetteer.de.-location-land-naturalLandscape-=Naturraum
-gazetteer.de.-location-protected-biosphere-=Biosph‰renreservat
+gazetteer.de.-location-protected-biosphere-=Biosph√§renreservat
 gazetteer.de.-location-protected-nationalPark-=Nationalpark
 gazetteer.de.-location-protected-naturalPark-=Naturpark
 gazetteer.de.-location-protected-protectedArea-=Schutzgebiet
