- saved mapping file in ISO format for correct encoding - added test for correct encoding usage

--- a/src/main/resources/mapping.properties
+++ b/src/main/resources/mapping.properties
@@ -1,3 +1,6 @@
+# THIS FILE MUST BE WRITTEN IN ISO-8859-1-ENCODING!!!
+# Check for the correct Umlauts!
+
 gazetteer.de.-location-admin-nation-=Staat
 gazetteer.de.-location-admin-use2-=Bundesland
 gazetteer.de.-location-admin-use3-=Regierungsbezirk
@@ -13,7 +16,7 @@ gazetteer.de.-location-land-landscape-archipelago-=Inselgruppe
 gazetteer.de.-location-land-landscape-mountain-=Berg
 gazetteer.de.-location-land-landscape-mountains-=Gebirge
 gazetteer.de.-location-land-naturalLandscape-=Naturraum
-gazetteer.de.-location-protected-biosphere-=Biosph√§renreservat
+gazetteer.de.-location-protected-biosphere-=Biosph‰renreservat
 gazetteer.de.-location-protected-nationalPark-=Nationalpark
 gazetteer.de.-location-protected-naturalPark-=Naturpark
 gazetteer.de.-location-protected-protectedArea-=Schutzgebiet
