--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>de.ingrid</groupId>
     <artifactId>ingrid-base-pom</artifactId>
-    <version>3.4.0</version>
+    <version>3.5.0-SNAPSHOT-R304</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.ingrid</groupId>
@@ -38,6 +38,7 @@
     <dependency>
       <groupId>axis</groupId>
       <artifactId>axis</artifactId>
+      <version>1.4</version>
     </dependency>
     <!-- <dependency>
       <groupId>uba</groupId>
@@ -53,10 +54,12 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
+      <version>1.2.14</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <version>3.8.1</version>
     </dependency>
   </dependencies>
   <!-- NEVER DELETE: InGrid repo needed for download of base pom if not present ! -->
