--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
   <version>3.5.0-SNAPSHOT</version>
   <name>ingrid-external-service-sns</name>
   <scm>
-    <connection>scm:svn:https://harrison.its-technidata.de:444/svn/ingrid/ingrid-external-service-sns/trunk</connection>
-    <developerConnection>scm:svn:https://harrison.its-technidata.de:444/svn/ingrid/ingrid-external-service-sns/trunk</developerConnection>
+    <connection>scm:git:git@github.com:informationgrid/ingrid-external-service-sns.git</connection>
+    <developerConnection>scm:git:git@github.com:informationgrid/ingrid-external-service-sns.git</developerConnection>
   </scm>
   <dependencies>
     <dependency>
@@ -42,7 +42,7 @@
 		<repository>
 			<id>de.ingrid.all</id>
 			<name>Maven Repo InGrid</name>
-			<url>http://harrison.its-technidata.de/archiva/repository/ingrid-all</url>
+			<url>https://dev.informationgrid.eu/archiva/repository/ingrid-all</url>
 		</repository>
 	</repositories>
 </project>
