--- a/pom.xml
+++ b/pom.xml
@@ -19,22 +19,27 @@
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-external-services-api</artifactId>
+      <version>3.5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>axis</groupId>
       <artifactId>axis</artifactId>
+      <version>1.4</version>
     </dependency>
     <dependency>
       <groupId>uba</groupId>
       <artifactId>xtmStubs</artifactId>
+      <version>3.0.0.1</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <version>4.11</version>
     </dependency>
   </dependencies>
   <!-- NEVER DELETE: InGrid repo needed for download of base pom if not present ! -->
