--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
   <groupId>de.ingrid</groupId>
   <artifactId>ingrid-external-service-sns</artifactId>
   <packaging>jar</packaging>
-  <version>3.5.0</version>
+  <version>3.6.0-SNAPSHOT</version>
   <name>ingrid-external-service-sns</name>
   <scm>
     <connection>scm:git:git@github.com:informationgrid/ingrid-external-service-sns.git</connection>
     <developerConnection>scm:git:git@github.com:informationgrid/ingrid-external-service-sns.git</developerConnection>
-    <tag>ingrid-external-service-sns-3.5.0</tag>
+    <tag>HEAD</tag>
   </scm>
   <dependencies>
     <dependency>
