--- a/pom.xml
+++ b/pom.xml
@@ -18,30 +18,41 @@
   </scm>
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>de.ingrid</groupId>
-        <artifactId>ingrid-version-management-pom</artifactId>
-        <version>3.6.0-SNAPSHOT</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+        <dependency>
+          <groupId>xerces</groupId>
+          <artifactId>xercesImpl</artifactId>
+          <version>2.10.0</version>
+        </dependency>
+        <dependency>
+          <groupId>xml-apis</groupId>
+          <artifactId>xml-apis</artifactId>
+          <version>1.4.01</version>
+        </dependency>
     </dependencies>
   </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-external-services-api</artifactId>
+      <version>3.5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>axis</groupId>
       <artifactId>axis</artifactId>
       <version>1.4</version>
     </dependency>
-    <dependency>
+    <!-- <dependency>
       <groupId>uba</groupId>
       <artifactId>xtmStubs</artifactId>
       <version>3.0.0.1</version>
+    </dependency> -->
+    <!-- JENA libs for RDF support -->
+    <dependency>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>jena-arq</artifactId>
+      <version>2.11.1</version>
     </dependency>
+    <!-- End of JENA libs -->
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
