--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
       <dependency>
         <groupId>de.ingrid</groupId>
         <artifactId>ingrid-version-management-pom</artifactId>
-        <version>3.6.0-SNAPSHOT</version>
+        <version>3.6.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-external-services-api</artifactId>
-      <version>3.5.0-SNAPSHOT</version>
+      <version>3.5.0</version>
     </dependency>
     <dependency>
       <groupId>axis</groupId>
