- changed configuration for jgitflow-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         <version>1.0-m5.1</version>
         <configuration>
           <defaultOriginUrl>https://github.com/informationgrid/ingrid-external-service-sns</defaultOriginUrl>
-          <noReleaseBuild>true</noReleaseBuild>
+          <noDeploy>true</noDeploy>
         </configuration>
       </plugin>
     </plugins>
