--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>de.ingrid</groupId>
   <artifactId>ingrid-external-service-sns</artifactId>
   <packaging>jar</packaging>
-  <version>3.6.3-SNAPSHOT</version>
+  <version>3.6.2.1</version>
   <name>ingrid-external-service-sns</name>
   <scm>
     <connection>scm:git:git@github.com:informationgrid/ingrid-external-service-sns.git</connection>
