--- a/pom.xml
+++ b/pom.xml
@@ -6,32 +6,20 @@
     <version>5.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>de.ingrid</groupId>
   <artifactId>ingrid-external-service-sns</artifactId>
   <packaging>jar</packaging>
-  <version>5.12.0-SNAPSHOT</version>
+  <version>5.15.0.3324-SNAPSHOT</version>
   <name>ingrid-external-service-sns</name>
   <scm>
     <connection>scm:git:git@github.com:informationgrid/ingrid-external-service-sns.git</connection>
     <developerConnection>scm:git:git@github.com:informationgrid/ingrid-external-service-sns.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>de.ingrid</groupId>
-        <artifactId>ingrid-version-management-pom</artifactId>
-        <version>3.6.0</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-external-services-api</artifactId>
-      <version>4.0.3</version>
+      <version>5.15.0.3324-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>axis</groupId>
@@ -49,12 +37,17 @@
       <artifactId>jena-arq</artifactId>
       <version>2.13.0</version>
     </dependency>
-    <!-- End of JENA libs -->
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.19.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.19.0</version>
+    </dependency>
+    <!-- End of JENA libs -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -72,6 +65,33 @@
           <noDeploy>true</noDeploy>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.openrewrite.maven</groupId>
+        <artifactId>rewrite-maven-plugin</artifactId>
+        <version>4.36.0</version>
+        <configuration>
+          <activeRecipes>
+                              <recipe>org.openrewrite.java.logging.log4j.Log4j1ToLog4j2</recipe>
+<!--            <recipe>org.openrewrite.java.testing.junit5.JUnit4to5Migration</recipe>-->
+<!--            <recipe>org.openrewrite.java.testing.junit5.CleanupAssertions</recipe>-->
+<!--            <recipe>org.openrewrite.java.testing.junit5.CleanupJUnitImports</recipe>-->
+<!--            <recipe>org.openrewrite.java.testing.junit5.ExpectedExceptionToAssertThrows</recipe>-->
+          </activeRecipes>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.openrewrite.recipe</groupId>
+            <artifactId>rewrite-testing-frameworks</artifactId>
+            <version>1.30.0</version>
+          </dependency>
+          <dependency>
+            <groupId>org.openrewrite.recipe</groupId>
+            <artifactId>rewrite-logging-frameworks</artifactId>
+            <version>1.14.0</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+
     </plugins>
   </build>
   <!-- NEVER DELETE: InGrid repo needed for download of base pom if not present ! -->
