--- a/pom.xml
+++ b/pom.xml
@@ -15,27 +15,20 @@
     <developerConnection>scm:git:git@github.com:informationgrid/ingrid-external-service-sns.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
+  <properties>
+    <maven.compiler.release>17</maven.compiler.release>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-external-services-api</artifactId>
       <version>5.15.0.3324-SNAPSHOT</version>
     </dependency>
-    <dependency>
-      <groupId>axis</groupId>
-      <artifactId>axis</artifactId>
-      <version>1.4</version>
-    </dependency>
-    <!-- <dependency>
-      <groupId>uba</groupId>
-      <artifactId>xtmStubs</artifactId>
-      <version>3.0.0.1</version>
-    </dependency> -->
     <!-- JENA libs for RDF support -->
     <dependency>
       <groupId>org.apache.jena</groupId>
       <artifactId>jena-arq</artifactId>
-      <version>2.13.0</version>
+      <version>4.6.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
