--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ingrid-external-service-sns</artifactId>
   <packaging>jar</packaging>
-  <version>5.15.0-SNAPSHOT</version>
+  <version>dummy-SNAPSHOT</version>
   <name>ingrid-external-service-sns</name>
   <scm>
     <connection>scm:git:git@github.com:informationgrid/ingrid-external-service-sns.git</connection>
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>de.ingrid</groupId>
       <artifactId>ingrid-external-services-api</artifactId>
-      <version>5.15.0-SNAPSHOT</version>
+      <version>6.0.0</version>
     </dependency>
     <!-- JENA libs for RDF support -->
     <dependency>
